--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write \"./**/*.{ts,tsx,json}\""
   },
   "dependencies": {
+    "@fontsource/source-sans-pro": "^4.5.0",
     "@twuni/emojify": "^1.0.2",
     "daisyui": "^1.14.2",
     "next": "11.1.2",
