--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-seo": "^4.28.1",
     "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "17.0.25",
