--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/source-sans-pro": "^4.5.0",
     "@twuni/emojify": "^1.0.2",
     "daisyui": "^1.14.2",
+    "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "next-seo": "^4.28.1",
     "nextjs-progressbar": "^0.0.11",
