--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -11,7 +11,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/701242?v=4",
       "profile": "https://medium.com/@geeknees",
       "contributions": [
-        "code"
+        "code",
+        "content"
       ]
     },
     {
@@ -20,7 +21,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/65018379?v=4",
       "profile": "http://rishit-khandelwal.github.io",
       "contributions": [
-        "code"
+        "code",
+        "content"
       ]
     },
     {
@@ -29,7 +31,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/63192115?v=4",
       "profile": "https://github.com/AnishDe12020",
       "contributions": [
-        "design"
+        "design",
+        "code"
       ]
     },
     {
@@ -38,7 +41,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/61692246?v=4",
       "profile": "https://github.com/mihaiandrei97",
       "contributions": [
-        "code"
+        "code",
+        "content"
       ]
     },
     {
@@ -47,7 +51,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/46792249?v=4",
       "profile": "https://gourav-khunger.web.app",
       "contributions": [
-        "code"
+        "code",
+        "content"
       ]
     },
     {
@@ -56,7 +61,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/75479355?v=4",
       "profile": "https://www.apoorvcodes.me",
       "contributions": [
-        "code"
+        "code",
+        "content"
       ]
     },
     {
@@ -65,7 +71,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/64367926?v=4",
       "profile": "http://vaibhavjaiswal.vercel.app",
       "contributions": [
-        "code"
+        "code",
+        "content"
       ]
     },
     {
@@ -74,7 +81,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/47524279?v=4",
       "profile": "https://cb-ashik.me",
       "contributions": [
-        "code"
+        "code",
+        "content"
       ]
     },
     {
@@ -83,7 +91,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/76690419?v=4",
       "profile": "https://www.avneesh.tech/",
       "contributions": [
-        "design"
+        "design",
+        "code"
       ]
     }
   ],
