--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.0",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
