--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -153,6 +153,17 @@
       ]
     },
     {
+    
+      "login": "domitechnshimba",
+      "name": "Domnic Nshimba",
+      "avatar_url": "https://avatars.githubusercontent.com/u/25669982?v=4",
+      "profile": "http://dominicnshimba.me",
+      "contributions": [
+        "design"
+      ]
+    },
+    {
+      
       "login": "HussainGagan",
       "name": "Hussain Gagan",
       "avatar_url": "https://avatars.githubusercontent.com/u/69407430?v=4",
