--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -179,6 +179,16 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "hassancodess",
+      "name": "Hassan Hanif",
+      "avatar_url": "https://avatars.githubusercontent.com/u/102203080?v=4",
+      "profile": "https://github.com/hassancodess",
+      "contributions": [
+        "content",
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
