--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "next": ">=12.3.1",
     "next-seo": "^5.5.0",
     "nextjs-progressbar": "^0.0.14",
+    "octokit": "^2.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.8.2",
