--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "hacktoberfest-projects",
+  "name": "new",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "dev": "next dev",
     "lint": "next lint",
-    "format": "prettier --write \"./**/*.{ts,tsx,json}\""
+    "start": "next start"
   },
   "dependencies": {
     "@fontsource/poppins": "^4.5.10",
@@ -15,29 +14,40 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tanstack/react-query": "^4.10.0",
+    "@trpc/client": "10.0.0-rc.0",
+    "@trpc/next": "10.0.0-rc.0",
+    "@trpc/react-query": "10.0.0-rc.0",
+    "@trpc/server": "10.0.0-rc.0",
     "@twuni/emojify": "^1.0.2",
-    "daisyui": "^2.31.0",
-    "framer-motion": "^7.5.2",
-    "next": ">=12.3.1",
-    "next-seo": "^5.5.0",
-    "nextjs-progressbar": "^0.0.14",
-    "octokit": "^2.0.10",
+    "daisyui": "^2.33.0",
+    "framer-motion": "^7.6.2",
+    "next": "13.0.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.36.1",
-    "react-icons": "^4.4.0",
-    "swr": "^1.3.0"
+    "react-hook-form": "^7.38.0",
+    "react-icons": "^4.6.0",
+    "superjson": "1.9.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@types/node": "^18.8.2",
-    "@types/react": "18.0.21",
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
     "@types/twuni__emojify": "^1.0.0",
-    "autoprefixer": "^10.4.12",
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.17",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.22.0",
+    "eslint-config-next": "13.0.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.8.4"
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.2.0",
+    "typescript": "^4.8.4"
+  },
+  "ct3aMetadata": {
+    "initVersion": "6.6.0"
   }
 }
