--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -193,7 +193,7 @@
       "contributions": ["design", "code"]
     },
     {
-      "login": "Ahmadou5",
+      "login": "ahmadou5",
       "name": "Ahmad Auwal",
       "avatar_url": "https://ahmadou.vercel.app/static/media/ahmad.66f17b60679a4b7c961b.png",
       "profile": "https://ahmadou.vercel.app",
