--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@twuni/emojify": "^1.0.2",
     "daisyui": "^3.7.7",
     "framer-motion": "^10.16.4",
-    "next": ">=13.5.2",
+    "next": "^13.5.3",
     "next-seo": "^6.1.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
