--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"./**/*.{ts,tsx,json}\""
+    "format": "prettier --write \"./**/*.{ts,tsx,json}\"",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@fontsource/poppins": "^5.0.8",
