--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -324,7 +324,16 @@
       "contributions": [
         "code"
       ]
-    }
+    },
+    {
+      "login": "NishidhJain",
+      "name": "Nishidh Jain",
+      "avatar_url": "https://avatars.githubusercontent.com/u/61869195?v=4",
+      "profile": "https://github.com/NishidhJain",
+      "contributions": [
+        "design",
+        "code"
+      ]
   ],
   "contributorsPerLine": 7,
   "projectName": "hacktoberfest-projects",
