--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"./**/*.{ts,tsx,json}\"",
-    "preinstall": "npx only-allow pnpm"
+    "format": "prettier --write \"./**/*.{ts,tsx,json}\""
   },
   "dependencies": {
     "@fontsource/poppins": "^5.0.8",
