--- a/.github/workflows/check-linting-and-format.yml
+++ b/.github/workflows/check-linting-and-format.yml
@@ -14,19 +14,28 @@ jobs:
   run-linters:
     name: Run linters
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18]
 
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v2
         with:
-          node-version: 18
+          version: 8
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
 
       # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies
-        run: npm ci
+      - name: Install dependencies
+        run: pnpm install
 
       - name: Run linters
         uses: wearerequired/lint-action@v2
