--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "daisyui": "^3.7.7",
     "framer-motion": "^10.16.4",
     "next": "^13.5.3",
+    "next-cloudinary": "^4.22.0",
     "next-seo": "^6.1.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
