--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-config-next": "13.5.2",
     "postcss": "^8.4.30",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.5",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
   }
