✨ Reporting repository and saving it in the DB

--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next-auth/xata-adapter": "^0.2.2",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@twuni/emojify": "^1.0.2",
     "@xata.io/client": "^0.26.7",
+    "axios": "^1.5.1",
     "daisyui": "^3.7.7",
     "framer-motion": "^10.16.4",
+    "jotai": "^2.4.3",
     "next": "^13.5.3",
     "next-auth": "^4.23.2",
     "next-cloudinary": "^4.22.0",
@@ -28,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "zod": "^3.22.2"
   },
