Update on the production deployment

--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -1,13 +1,40 @@
-FROM node:14-alpine
+FROM node:18-alpine AS base
+
+RUN npm i -g pnpm
+
+FROM base AS dependencies
+
+COPY package*.json pnpm-lock.yaml ./
+
+RUN pnpm install
+
+FROM base AS builder
 
 WORKDIR /app
 
-COPY package*.json yarn.lock* ./
+COPY . .
 
-RUN yarn
+COPY --from=dependencies /node_modules ./node_modules
 
-COPY ./ ./
+RUN pnpm build
 
-RUN yarn build
+FROM builder AS prod
 
-CMD ["yarn", "start"]
+ENV NODE_ENV production
+
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+
+COPY --from=builder /app/public ./public
+
+RUN mkdir .next
+RUN chown nextjs:nodejs .next
+
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+
+USER nextjs
+
+EXPOSE 3000
+
+CMD ["pnpm", "start"]
