--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "typescript": "5.6.2"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
