add newer eslint config

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.32.0",
     "@types/node": "^24.1.0",
     "@types/react": "19.1.9",
     "@types/twuni__emojify": "^1.0.2",
