--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run xata:init && next build",
     "start": "next start",
     "lint": "next lint",
+    "xata:init": "dotenv -- xata init --db \"$XATA_HTTP_ENDPOINT\" --sdk --no-input --yes --codegen=src/xata.ts --force",
     "format": "prettier --write \"./**/*.{ts,tsx,json}\""
   },
   "dependencies": {
@@ -18,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.24",
+    "dotenv-cli": "^10.0.0",
     "framer-motion": "^12.23.12",
     "jotai": "^2.12.5",
     "lucide-react": "^0.536.0",
