--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@auth/xata-adapter": "^1.10.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@twuni/emojify": "^1.0.2",
+    "@xata.io/cli": "^0.16.12",
     "@xata.io/client": "^0.30.1",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
