--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.0.14"
   },
@@ -51,7 +52,6 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^3.4.10",
     "typescript": "5.9.2"
   },
   "engines": {
