--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   },
   "dependencies": {
     "@auth/xata-adapter": "^1.10.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.32.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@twuni/emojify": "^1.0.2",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.9",
+    "@types/twuni__emojify": "^1.0.2",
     "@xata.io/cli": "^0.16.12",
     "@xata.io/client": "^0.30.1",
     "autoprefixer": "^10.4.21",
@@ -23,6 +28,8 @@
     "daisyui": "^4.12.24",
     "dotenv": "^17.2.1",
     "dotenv-cli": "^10.0.0",
+    "eslint": "^9.32.0",
+    "eslint-config-next": "^15.4.5",
     "framer-motion": "^12.23.12",
     "jotai": "^2.12.5",
     "lucide-react": "^0.536.0",
@@ -32,6 +39,8 @@
     "next-seo": "^6.8.0",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "^7.62.0",
@@ -40,19 +49,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.9.2",
     "zod": "^4.0.14"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.32.0",
-    "@types/node": "^24.1.0",
-    "@types/react": "19.1.9",
-    "@types/twuni__emojify": "^1.0.2",
-    "eslint": "9.32.0",
-    "eslint-config-next": "15.4.5",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "typescript": "5.9.2"
   },
   "engines": {
     "node": ">=22.0.0"
