--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run xata:init && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "xata:init": "node prebuild.mjs",
