enhancement: made setup process easier by including comments and vars to guide newcommers

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-AUTH_SECRET="" # A random string
-AUTH_URL="" # Should be http://localhost:3000 for local development
-AUTH_GITHUB_ID=""
-AUTH_GITHUB_SECRET=""
-XATA_API_KEY=""
-XATA_BRANCH="" # Default should be "main"
+AUTH_SECRET="local-secret" # A random string
+AUTH_URL="http://localhost:3000" # Should be http://localhost:3000 for local development
+AUTH_GITHUB_ID="" # your github id 
+AUTH_GITHUB_SECRET="" # your github client secret
+XATA_API_KEY="" # xata api key
+XATA_BRANCH="main" # Default should be "main"
+
+XATA_HTTP_ENDPOINT="http://localhost"
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="" # Optional
-NEXT_PUBLIC_ANALYTICS_WEBSITE_ID="" # Optional
+NEXT_PUBLIC_ANALYTICS_WEBSITE_ID="00000000-0000-0000-0000-000000000000" # mandatory so put this value dont change it
