--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/react": "^19.1.9",
     "@types/twuni__emojify": "^1.0.2",
     "@xata.io/cli": "^0.16.12",
-    "@xata.io/client": "^0.30.1",
+    "@xata.io/client": "0.0.0-next.v93343b9646f57a1e5c51c35eccf0767c2bb80baa",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
