--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write \"./**/*.{ts,tsx,json}\""
   },
   "dependencies": {
+    "@auth/core": "^0.40.0",
+    "@auth/drizzle-adapter": "^1.10.0",
     "@auth/xata-adapter": "^1.10.0",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.32.0",
@@ -20,14 +22,15 @@
     "@types/react": "^19.1.9",
     "@types/twuni__emojify": "^1.0.2",
     "@xata.io/cli": "^0.16.12",
-    "@xata.io/client": "^0.30.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "better-auth": "^1.3.26",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.24",
     "dotenv": "^17.2.1",
     "dotenv-cli": "^10.0.0",
+    "drizzle-orm": "^0.44.6",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
     "framer-motion": "^12.23.12",
@@ -39,6 +42,7 @@
     "next-seo": "^6.8.0",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "^8.5.6",
+    "postgres": "^3.4.7",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "19.1.1",
@@ -54,5 +58,8 @@
   },
   "engines": {
     "node": ">=22.0.0"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.5"
   }
 }
