--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
+# Database
+DATABASE_URL="" # PostgreSQL connection string
+# For Docker Compose: postgresql://hacktoberfest:hacktoberfest123@localhost:5432/hacktoberfest
+# For cloud providers: copy the connection string from your provider
+
+# Authentication
 AUTH_SECRET="" # A random string
 AUTH_URL="" # Should be http://localhost:3000 for local development
 AUTH_GITHUB_ID=""
 AUTH_GITHUB_SECRET=""
-XATA_API_KEY=""
-XATA_BRANCH="" # Default should be "main"
+AUTH_DRIZZLE_URL="$DATABASE_URL" # Should be the same as DATABASE_URL
 
+# Optional
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="" # Optional
 NEXT_PUBLIC_ANALYTICS_WEBSITE_ID="" # Optional
